--- a/LidStatusService/LidStatusService.csproj
+++ b/LidStatusService/LidStatusService.csproj
@@ -73,5 +73,8 @@
       <DependentUpon>LidStatusService.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="TODO.md" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
